--- a/report/clinical/bibliography.bib
+++ b/report/clinical/bibliography.bib
@@ -236,6 +236,17 @@ publisher={Institute of Mathematical Statistics}
   publisher={MedReviews, LLC}
 }
 
+@article{turnbull1976empirical,
+  title={The empirical distribution function with arbitrarily grouped, censored and truncated data},
+  author={Turnbull, Bruce W},
+  journal={Journal of the Royal Statistical Society. Series B (Methodological)},
+  volume={38},
+  number={3},
+  pages={290--295},
+  year={1976},
+  publisher={JSTOR}
+}
+
 @article{bratt2013study,
   title={The Study of Active Monitoring in Sweden (SAMS): a randomized study comparing two different follow-up schedules for active surveillance of low-risk prostate cancer},
   author={Bratt, Ola and Carlsson, Stefan and Holmberg, Erik and Holmberg, Lars and Johansson, Eva and Josefsson, Andreas and Nilsson, Annika and Nyberg, Maria and Robinsson, David and Sandberg, Jonas and others},
