--- a/report/clinical/bibliography.bib
+++ b/report/clinical/bibliography.bib
@@ -9,6 +9,17 @@
   publisher={Elsevier}
 }
 
+@article{steyerberg2010assessing,
+  title={Assessing the performance of prediction models: a framework for some traditional and novel measures},
+  author={Steyerberg, Ewout W and Vickers, Andrew J and Cook, Nancy R and Gerds, Thomas and Gonen, Mithat and Obuchowski, Nancy and Pencina, Michael J and Kattan, Michael W},
+  journal={Epidemiology (Cambridge, Mass.)},
+  volume={21},
+  number={1},
+  pages={128},
+  year={2010},
+  publisher={NIH Public Access}
+}
+
 @article{vickers2009psavelocity,
   title={Systematic review of pretreatment prostate-specific antigen velocity and doubling time as predictors for prostate cancer},
   author={Vickers, Andrew J and Savage, Caroline and O'Brien, M Frank and Lilja, Hans},
