--- a/report/clinical/supplementary/B_risk_prediction_validation.tex
+++ b/report/clinical/supplementary/B_risk_prediction_validation.tex
@@ -27,142 +27,182 @@ The personalized risk profile of the patient (see Panel~C, Figure~\ref{fig:dynri
 
 \clearpage
 \subsection{Validation of Risk Predictions}
-We wanted to check the discrimination and calibration of our model. At the same time we also wanted to check if our model could be used in other cohorts. To this end, we validated the predictions of reclassification internally within the PRIAS dataset, as well as externally in largest five AS cohorts from the GAP3 database \citep{gap3_2018}. These are the University of Toronto AS (Toronto), Johns Hopkins AS (Hopkins), Memorial Sloan Kettering Cancer Center AS (MSKCC), King's College London AS (KCL), and Michigan Urological Surgery Improvement Collaborative AS (MUSIC). In all of these cohorts, we calculated the area under the receiver operating characteristic curve or AUC \cite{rizopoulos2017dynamic} as a measure of discrimination between patients who obtain reclassification and those do not obtain reclassification. We also calculated root mean squared prediction error or RMSPE \cite{rizopoulos2017dynamic} as a measure of calibration. Both AUC and RMSPE take a value between 0 and 1. Ideally RMSPE should be 0 and AUC should 1. In addition, it is preferred that AUC $>$ 0.5 because an AUC $\leq$ 0.5 indicates that the model performs worse than random discrimination. Since AS studies are longitudinal in nature, AUC and RMSPE are also time dependent. More specifically, given the time of latest biopsy $t$, and history of PSA measurements up to time $s$, we calculate AUC and RMSPE for a medically relevant time frame $(t, s]$, within which the occurrence of reclassification is of interest. In the case of prostate cancer, at any point in time $s$ it is of interest to identify patients who may have obtained reclassification in the last one year $(s-1, s]$. That is we set $t=s-1$. We then calculate AUC and RMSPE at a gap of every six months (follow-up schedule of PRIAS) until year five (95-percentile of the observed times of reclassification), that is, $s \epsilon \{1, 1.5, \ldots, 5\}$ years. The resulting estimates are summarized in Figure~\ref{fig:auc_pe}, and in Table~\ref{tab:AUC_PE_PRIAS} to Table~\ref{tab:AUC_PE_MUSIC}.
+We wanted to check the usefulness of our model for not only the PRIAS patients but also for patients from other cohorts. To this end, we validated our model in PRIAS dataset (internal validation) and in largest five cohorts from the GAP3 database \citep{gap3_2018}. These are the University of Toronto AS (Toronto), Johns Hopkins AS (Hopkins), Memorial Sloan Kettering Cancer Center AS (MSKCC), King's College London AS (KCL), and Michigan Urological Surgery Improvement Collaborative AS (MUSIC).
 
-\begin{figure}
+\textbf{\textit{Calibration-in-the-large}}
+We first assessed calibration-in-the-large \citep{steyerberg2010assessing} of our model in the aforementioned cohorts. To this end, we used our model to predict the cumulative risk of reclassification for each patient given their PSA measurements and biopsy results. We then averaged the resulting profiles of cumulative risk of reclassification. Subsequently we compared the averaged cumulative-risk profile with a non-parametric estimate \citep{turnbull1976empirical} of the cumulative risk of reclassification in each of the cohorts. The results are shown in Panel~A of Figure~\ref{fig:calib_before_after}. We can see that our model's calibration is fine only in PRIAS and Hopkins cohorts. To improve our model's calibration in KCL, MUSIC, Toronto, and MSKCC cohorts, we recalibrated the baseline hazard of the PRIAS model individually for each of these cohorts. More specifically, given the cohort data $\mathcal{D}_{n^c}$ of the $c$-th cohort, the recalibrated parameters $\boldsymbol{\gamma}_{h0}^c$ (Section \ref{sec:jm_framework}) of the log baseline hazard are given by:
+\begin{equation}
+p(\boldsymbol{\gamma}_{h0}^c \mid \mathcal{D}_n^c, \boldsymbol{b^c},  \boldsymbol{\theta}) \propto  \prod_{i=1}^{n^c} p(l_i^c, r_i^c \mid \boldsymbol{b^c_i}, \boldsymbol{\theta}) p(\boldsymbol{\gamma}_{h0}^c)
+\end{equation}
+where $n^c$ are the number of patients in the $c$-th cohort, $\boldsymbol{\theta}$ are the parameters of the joint model fitted to the PRIAS dataset, $l_i^c, r_i^c$ are the interval in which reclassification is observed ($r_i^c = \infty$ for right censored patients) for the $i-th$ patient of the $c$-th cohort. The symbol $\boldsymbol{b^c_i}$ denotes his patient-specific random effects (Section~\ref{sec:jm_framework}). The random effects are estimated from the original joint model fitted to the PRIAS dataset. We re-evaluated the calibration-in-the-large of our model after the recalibration of the baseline hazard. The improved calibration-in-the-large is shown in Panel~B of Figure~\ref{fig:calib_before_after}.
+
+\begin{figure}[!htb]
+\centerline{\includegraphics[width=\columnwidth]{images/calib_before_after.eps}}
+\caption{\textbf{Calibration-in-the-large of our model:}. In \textbf{Panel~A} we can see that our model is not well calibrated for use in KCL, MUSIC, Toronto and MSKCC. In \textbf{Panel~B} we can see that calibration of model predictions improved in KCL, MUSIC, Toronto and MSKCC cohorts. Recalibration was not conducted for Hopkins cohort. Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
+\label{fig:calib_before_after}
+\end{figure}
+
+\clearpage
+\textbf{\textit{Recalibrated PRIAS Model Versus Individual Joint Models For Each Cohort}}
+We wanted to check if our recalibrated PRIAS model performed as well fitting an entirely new joint model to the external cohorts. To this end, we predicted cumulative-risk of reclassification for each patient from each patient using two different models, namely the recalibrated PRIAS model for that cohort, and a new joint model fitted to that cohort. The difference in predicted cumulative-risk of reclassification from these cohorts (Figure~\ref{fig:calib_insmall_after}) is quite small. The only exception is the MUSIC cohort in which individual risk predictions obtained from the recalibrated PRIAS model may differ from predictions from a newly fitted joint model, by more than 10\% in at least half of the patients.
+ 
+\begin{figure}[!htb]
+\centerline{\includegraphics[width=0.85\columnwidth]{images/calib_insmall_after.eps}}
+\caption{\textbf{Comparison of predictions from recalibrated PRIAS model with individual joint models fitted to external cohorts:} On Y-axis we show the difference between predicted cumulative-risk of reclassification for individual patients using two models, namely the recalibrated PRIAS model for each cohort, and individual joint models fitted to each cohort. The maximum differences in each direction can be 100\% or -100\%. The figure shows that in all cohorts except the MUSIC cohort, the recalibrated PRIAS model predicts as good as a newly fitted joint model to each of the cohorts. Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
+\label{fig:calib_insmall_after}
+\end{figure}
+
+\clearpage
+\textbf{\textit{Validation of Dynamic Cumulative-Risk Predictions}}
+As shown in Figure~\ref{fig:dynrisk_plot_102} the cumulative-risk predictions from the joint model are dynamic in nature. That is, they update as more data becomes available over time. Consequently, the discrimination and calibration of the joint model also depends on the available data. We assessed these two measures dynamically in the PRIAS cohort (interval validation) and in the largest five external cohorts that are part of the GAP3 database. For discrimination we utilized the time-varying area under the receiver operating characteristic curve or time-varying AUC \citep{rizopoulos2017dynamic}. For time-varying calibration we assessed the mean absolute prediction error or MAPE \citep{rizopoulos2017dynamic}. The AUC indicates how well the model discriminates between patients who experience reclassification and those do not. The MAPE indicates how well the model predicts reclassification. Both AUC and MAPE are restricted to $[0,1]$. However, it is preferred that AUC $>$ 0.5 because an AUC $\leq$ 0.5 indicates that the model performs worse than random discrimination. Ideally MAPE should be 0.
+
+We calculate AUC and MAPE in a time-dependent manner. More specifically, given the time of latest biopsy $t$, and history of PSA measurements up to time $s$, we calculate AUC and MAPE for a medically relevant time frame $(t, s]$, within which the occurrence of reclassification is of interest. In the case of prostate cancer, at any point in time $s$ it is of interest to identify patients who may have experienced reclassification in the last one year $(s-1, s]$. That is we set $t=s-1$. We then calculate AUC and MAPE at a gap of every six months (follow-up schedule of PRIAS). That is, $s \epsilon \{1, 1.5, \ldots \}$ years. To obtain reliable estimates of AUC and MAPE, in each cohort we restrict $s$ to a maximum time point $s_{\mbox{max}}$, such that there are at least 10 patients who experience reclassification after $s_{\mbox{max}}$. This maximum time point $s_{\mbox{max}}$ differs between cohorts. The resulting estimates of AUC are summarized in Figure~\ref{fig:auc_pe}, and in Table~\ref{tab:AUC_PE_PRIAS} to Table~\ref{tab:AUC_PE_MUSIC}. Results are based on the recalibrated PRIAS model for Toronto, MSKCC, MUSIC, and KCL cohorts, whereas original joint model fitted to the PRIAS dataset is used for Hopkins and PRIAS cohorts.
+
+The results show that AUC remains more or less constant in all cohorts as more data becomes available for patients. The AUC obtains a moderate value, roughly between 0.5 and 0.7 for all cohorts. On the other hand, MAPE reduces by a big margin after year two of follow-up. This could be because of two reasons. Firstly, MAPE at year 1 is based only on four PSA measurements gathered in first year of follow-up, whereas after year two number of PSA measurements increase. Secondly, patients in year one consist of two sub-populations, namely patients with a correct Gleason grade~1 at the time of inclusion in AS, and patients who probably had Gleason grade~2 at inclusion but were misclassified by the urologist as Gleason grade~1 patients. To remedy this problem, a biopsy for all patients at year one is commonly recommended in all AS programs \citep{bokhorst2015compliance}.
+
+\begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/auc_pe.eps}}
-\caption{\textbf{Validation of predictions of Gleason $\geq$ 7 (reclassification)}. In \textbf{Panel~A} we can see that the time dependent area under the receiver operating characteristic curve or AUC (measure of discrimination) is above 0.5 in PRIAS (internal validation), and in Toronto, JHAS, MSKCC, KCL, and MUSIC AS cohorts (external validation). In \textbf{Panel~B} we can see that the time dependent root mean squared prediction error or RMSPE (measure of calibration) is similar for PRIAS, and JHAS and Toronto cohorts. The bootstrapped 95\% confidence interval for these estimates are presented in Table~\ref{tab:AUC_PE_PRIAS} to Table~\ref{tab:AUC_PE_KCL}. Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{JHAS}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
+\caption{\textbf{Validation of Dynamic Cumulative-Risk Predictions}. In \textbf{Panel~A} we can see that the time dependent area under the receiver operating characteristic curve or AUC (measure of discrimination) is above 0.5 in PRIAS (internal validation), and in Toronto, JHAS, MSKCC, KCL, and MUSIC AS cohorts (external validation). In \textbf{Panel~B} we can see that the time dependent root mean squared prediction error or MAPE (measure of calibration) is similar for PRIAS, and JHAS and Toronto cohorts. The bootstrapped 95\% confidence interval for these estimates are presented in Table~\ref{tab:AUC_PE_PRIAS} to Table~\ref{tab:AUC_PE_KCL}. Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{JHAS}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
 \label{fig:auc_pe}
 \end{figure}
 
 \begin{table}[!htb]
 \small\sf\centering
-\caption{\textbf{Internal Validation of predictions of Gleason $\geq$ 7 (reclassification) in PRIAS cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) root mean squared prediction error or RMSPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
+\caption{\textbf{Internal validation of predictions of reclassification in PRIAS cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
 \label{tab:AUC_PE_PRIAS}
 \begin{tabular}{r|r|r}
 \hline
 \hline
-Follow-up period (years) & AUC (95\% CI) & RMSPE (95\%CI)\\ 
+Follow-up period (years) & AUC (95\% CI) & MAPE (95\%CI)\\ 
 \hline
-0.0 to 1.0 & 0.656 [0.623, 0.690] & 0.227 [0.223, 0.236]\\
-0.5 to 1.5 & 0.657 [0.641, 0.671] & 0.376 [0.371, 0.382]\\
-1.0 to 2.0 & 0.663 [0.651, 0.678] & 0.371 [0.364, 0.379]\\
-1.5 to 2.5 & 0.650 [0.600, 0.684] & 0.253 [0.245, 0.263]\\
-2.0 to 3.0 & 0.676 [0.641, 0.725] & 0.252 [0.241, 0.262]\\
-2.5 to 3.5 & 0.689 [0.629, 0.732] & 0.238 [0.224, 0.251]\\
-3.0 to 4.0 & 0.652 [0.614, 0.709] & 0.273 [0.263, 0.285]\\
-3.5 to 4.5 & 0.625 [0.591, 0.663] & 0.338 [0.326, 0.349]\\
-4.0 to 5.0 & 0.623 [0.587, 0.657] & 0.338 [0.325, 0.350]\\
+0.0 to 1.0 & 0.652 [0.611, 0.690] & 0.227 [0.223, 0.236]\\
+0.5 to 1.5 & 0.657 [0.641, 0.673] & 0.376 [0.371, 0.382]\\
+1.0 to 2.0 & 0.661 [0.647, 0.678] & 0.371 [0.364, 0.379]\\
+1.5 to 2.5 & 0.647 [0.596, 0.688] & 0.253 [0.245, 0.263]\\
+2.0 to 3.0 & 0.683 [0.642, 0.723] & 0.252 [0.241, 0.262]\\
+2.5 to 3.5 & 0.692 [0.632, 0.748] & 0.238 [0.224, 0.251]\\
+3.0 to 4.0 & 0.657 [0.603, 0.709] & 0.273 [0.263, 0.285]\\
+3.5 to 4.5 & 0.623 [0.582, 0.660] & 0.338 [0.326, 0.349]\\
+4.0 to 5.0 & 0.619 [0.582, 0.654] & 0.338 [0.325, 0.350]\\
+4.5 to 5.5 & 0.624 [0.537, 0.711] & 0.397 [0.355, 0.425]\\
+5.0 to 6.0 & 0.639 [0.582, 0.696] & 0.397 [0.355, 0.425]\\
 \hline
 \end{tabular}	
 \end{table}
 
 \begin{table}[!htb]
 \small\sf\centering
-\caption{\textbf{External Validation of predictions of Gleason $\geq$ 7 (reclassification) in University of Toronto Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) root mean squared prediction error or RMSPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
+\caption{\textbf{External validation of predictions of reclassification in University of Toronto Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
 \label{tab:AUC_PE_Toronto}
 \begin{tabular}{r|r|r}
 \hline
 \hline
-Follow-up period (years) & AUC (95\% CI) & RMSPE (95\%CI)\\ 
+Follow-up period (years) & AUC (95\% CI) & MAPE (95\%CI)\\ 
 \hline
-0.0 to 1.0 & 0.540 [0.493, 0.595] & 0.252 [0.236, 0.272]\\
-0.5 to 1.5 & 0.618 [0.562, 0.660] & 0.361 [0.350, 0.373]\\
-1.0 to 2.0 & 0.653 [0.580, 0.719] & 0.405 [0.384, 0.428]\\
-1.5 to 2.5 & 0.652 [0.596, 0.727] & 0.379 [0.358, 0.408]\\
-2.0 to 3.0 & 0.659 [0.565, 0.743] & 0.340 [0.303, 0.369]\\
-2.5 to 3.5 & 0.606 [0.548, 0.676] & 0.368 [0.340, 0.401]\\
-3.0 to 4.0 & 0.664 [0.583, 0.736] & 0.355 [0.324, 0.391]\\
-3.5 to 4.5 & 0.699 [0.610, 0.773] & 0.340 [0.310, 0.374]\\
-4.0 to 5.0 & 0.617 [0.546, 0.705] & 0.397 [0.355, 0.425]\\
+0.0 to 1.0 & 0.541 [0.470, 0.621] & 0.369 [0.352, 0.381]\\
+0.5 to 1.5 & 0.609 [0.547, 0.661] & 0.363 [0.348, 0.376]\\
+1.0 to 2.0 & 0.667 [0.634, 0.712] & 0.276 [0.259, 0.296]\\
+1.5 to 2.5 & 0.691 [0.651, 0.730] & 0.231 [0.205, 0.254]\\
+2.0 to 3.0 & 0.706 [0.637, 0.762] & 0.226 [0.196, 0.260]\\
+2.5 to 3.5 & 0.669 [0.586, 0.741] & 0.224 [0.195, 0.258]\\
+3.0 to 4.0 & 0.725 [0.649, 0.806] & 0.212 [0.184, 0.238]\\
+3.5 to 4.5 & 0.716 [0.642, 0.793] & 0.227 [0.206, 0.258]\\
+4.0 to 5.0 & 0.640 [0.579, 0.717] & 0.257 [0.222, 0.312]\\
+4.5 to 5.5 & 0.648 [0.579, 0.740] & 0.283 [0.247, 0.326]\\
+5.0 to 6.0 & 0.691 [0.608, 0.793] & 0.264 [0.232, 0.302]\\
+5.5 to 6.5 & 0.670 [0.543, 0.776] & 0.263 [0.227, 0.307]\\
+6.0 to 7.0 & 0.700 [0.544, 0.851] & 0.307 [0.258, 0.363]\\
+6.5 to 7.5 & 0.785 [0.640, 0.866] & 0.313 [0.272, 0.360]\\
+7.0 to 8.0 & 0.688 [0.532, 0.786] & 0.299 [0.249, 0.361]\\
 \hline
 \end{tabular}	
 \end{table}
 
 \begin{table}[!htb]
 \small\sf\centering
-\caption{\textbf{External Validation of predictions of Gleason $\geq$ 7 (reclassification) in Johns Hopkins Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) root mean squared prediction error or RMSPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
+\caption{\textbf{External validation of predictions of reclassification in Johns Hopkins Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
 \label{tab:AUC_PE_JHAS}
 \begin{tabular}{r|r|r}
 \hline
 \hline
-Follow-up period (years) & AUC (95\% CI) & RMSPE (95\%CI)\\ 
+Follow-up period (years) & AUC (95\% CI) & MAPE (95\%CI)\\ 
 \hline
-0.0 to 1.0 & 0.664 [0.604, 0.743] & 0.216 [0.198, 0.236]\\
-0.5 to 1.5 & 0.645 [0.597, 0.695] & 0.325 [0.310, 0.339]\\
-1.0 to 2.0 & 0.661 [0.615, 0.707] & 0.320 [0.300, 0.335]\\
-1.5 to 2.5 & 0.678 [0.587, 0.736] & 0.296 [0.277, 0.312]\\
-2.0 to 3.0 & 0.645 [0.595, 0.701] & 0.293 [0.268, 0.317]\\
-2.5 to 3.5 & 0.558 [0.445, 0.622] & 0.281 [0.256, 0.307]\\
-3.0 to 4.0 & 0.593 [0.498, 0.693] & 0.305 [0.281, 0.329]\\
-3.5 to 4.5 & 0.624 [0.527, 0.690] & 0.321 [0.294, 0.340]\\
-4.0 to 5.0 & 0.593 [0.483, 0.694] & 0.329 [0.306, 0.352]\\
+0.0 to 1.0 & 0.662 [0.586, 0.715] & 0.254 [0.245, 0.265]\\
+0.5 to 1.5 & 0.653 [0.603, 0.707] & 0.229 [0.219, 0.240]\\
+1.0 to 2.0 & 0.672 [0.604, 0.744] & 0.128 [0.115, 0.141]\\
+1.5 to 2.5 & 0.722 [0.652, 0.792] & 0.095 [0.081, 0.111]\\
+2.0 to 3.0 & 0.717 [0.638, 0.777] & 0.112 [0.100, 0.123]\\
+2.5 to 3.5 & 0.587 [0.493, 0.704] & 0.144 [0.129, 0.154]\\
+3.0 to 4.0 & 0.613 [0.486, 0.742] & 0.141 [0.126, 0.156]\\
+3.5 to 4.5 & 0.690 [0.594, 0.783] & 0.115 [0.100, 0.133]\\
+4.0 to 5.0 & 0.666 [0.572, 0.754] & 0.121 [0.104, 0.147]\\
+4.5 to 5.5 & 0.688 [0.519, 0.779] & 0.137 [0.119, 0.161]\\
+5.0 to 6.0 & 0.735 [0.676, 0.820] & 0.126 [0.102, 0.152]\\
+5.5 to 6.5 & 0.674 [0.581, 0.765] & 0.143 [0.121, 0.172]\\
+6.0 to 7.0 & 0.597 [0.472, 0.712] & 0.163 [0.126, 0.195]\\
 \hline
 \end{tabular}	
 \end{table}
 
 \begin{table}[!htb]
 \small\sf\centering
-\caption{\textbf{External Validation of predictions of Gleason $\geq$ 7 (reclassification) in Memorial Sloan Kettering Cancer Center Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) root mean squared prediction error or RMSPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
+\caption{\textbf{External validation of predictions of reclassification in Memorial Sloan Kettering Cancer Center Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
 \label{tab:AUC_PE_MSKCC}
 \begin{tabular}{r|r|r}
 \hline
 \hline
-Follow-up period (years) & AUC (95\% CI) & RMSPE (95\%CI)\\ 
+Follow-up period (years) & AUC (95\% CI) & MAPE (95\%CI)\\ 
 \hline
-0.0 to 1.0 & 0.626 [0.558, 0.681]  & 0.276 [0.260, 0.297]\\
-0.5 to 1.5 & 0.605 [0.539, 0.666]  & 0.340 [0.321, 0.360]\\
-1.0 to 2.0 & 0.612 [0.564, 0.672]  & 0.334 [0.316, 0.350]\\
-1.5 to 2.5 & 0.592 [0.502, 0.670]  & 0.327 [0.306, 0.345]\\
-2.0 to 3.0 & 0.638 [0.548, 0.720]  & 0.332 [0.304, 0.363]\\
-2.5 to 3.5 & 0.625 [0.542, 0.717]  & 0.330 [0.303, 0.371]\\
-3.0 to 4.0 & 0.594 [0.511, 0.655]  & 0.328 [0.281, 0.368]\\
-3.5 to 4.5 & 0.599 [0.481, 0.740]  & 0.350 [0.312, 0.373]\\
-4.0 to 5.0 & 0.653 [0.562, 0.724]  & 0.355 [0.320, 0.380]\\
+0.0 to 1.0 & 0.628 [0.577, 0.688]  & 0.317 [0.316, 0.318]\\
+0.5 to 1.5 & 0.606 [0.532, 0.657]  & 0.301 [0.290, 0.311]\\
+1.0 to 2.0 & 0.599 [0.518, 0.671]  & 0.230 [0.207, 0.256]\\
+1.5 to 2.5 & 0.581 [0.504, 0.663]  & 0.198 [0.168, 0.235]\\
+2.0 to 3.0 & 0.671 [0.599, 0.741]  & 0.208 [0.182, 0.232]\\
+2.5 to 3.5 & 0.703 [0.610, 0.777]  & 0.218 [0.197, 0.246]\\
+3.0 to 4.0 & 0.629 [0.499, 0.706]  & 0.226 [0.194, 0.259]\\
+3.5 to 4.5 & 0.664 [0.589, 0.756]  & 0.225 [0.199, 0.262]\\
+4.0 to 5.0 & 0.747 [0.642, 0.841]  & 0.215 [0.188, 0.247]\\
+4.5 to 5.5 & 0.719 [0.597, 0.852]  & 0.194 [0.165, 0.232]\\
+5.0 to 6.0 & 0.698 [0.565, 0.792]  & 0.174 [0.136, 0.227]\\
 \hline
 \end{tabular}	
 \end{table}
 
 \begin{table}[!htb]
 \small\sf\centering
-\caption{\textbf{External Validation of predictions of Gleason $\geq$ 7 (reclassification) in King's College London Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) root mean squared prediction error or RMSPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
+\caption{\textbf{External validation of predictions of reclassification in King's College London Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
 \label{tab:AUC_PE_KCL}
 \begin{tabular}{r|r|r}
 \hline
 \hline
-Follow-up period (years) & AUC (95\% CI) & RMSPE (95\%CI)\\ 
+Follow-up period (years) & AUC (95\% CI) & MAPE (95\%CI)\\ 
 \hline
-0.0 to 1.0 & 0.604 [0.548, 0.663] & 0.389 [0.366, 0.411]\\
-0.5 to 1.5 & 0.676 [0.603, 0.744] & 0.347 [0.328, 0.372]\\
-1.0 to 2.0 & 0.657 [0.578, 0.728] & 0.402 [0.368, 0.426]\\
-1.5 to 2.5 & 0.683 [0.595, 0.773] & 0.438 [0.395, 0.469]\\
-2.0 to 3.0 & 0.664 [0.576, 0.735] & 0.433 [0.396, 0.467]\\
-2.5 to 3.5 & 0.578 [0.443, 0.712] & 0.422 [0.345, 0.479]\\
-3.0 to 4.0 & 0.508 [0.358, 0.670] & 0.380 [0.313, 0.452]\\
-3.5 to 4.5 & 0.566 [0.346, 0.776] & 0.419 [0.354, 0.484]\\
-4.0 to 5.0 & 0.538 [0.295, 0.759] & 0.412 [0.345, 0.470]\\
+0.0 to 1.0 & 0.589 [0.514, 0.653] & 0.430 [0.407, 0.450] \\
+0.5 to 1.5 & 0.660 [0.550, 0.742] & 0.453 [0.431, 0.474] \\
+1.0 to 2.0 & 0.683 [0.604, 0.753] & 0.416 [0.396, 0.445] \\
+1.5 to 2.5 & 0.691 [0.621, 0.766] & 0.271 [0.246, 0.297] \\
+2.0 to 3.0 & 0.689 [0.616, 0.785] & 0.319 [0.282, 0.344] \\
 \hline
 \end{tabular}	
 \end{table}
 
+
+
 \begin{table}[!htb]
 \small\sf\centering
-\caption{\textbf{External Validation of predictions of Gleason $\geq$ 7 (reclassification) in Michigan Urological Surgery Improvement Collaborative Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) root mean squared prediction error or RMSPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
+\caption{\textbf{External validation of predictions of reclassification in Michigan Urological Surgery Improvement Collaborative Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
 \label{tab:AUC_PE_MUSIC}
 \begin{tabular}{r|r|r}
 \hline
 \hline
-Follow-up period (years) & AUC (95\% CI) & RMSPE (95\%CI)\\ 
+Follow-up period (years) & AUC (95\% CI) & MAPE (95\%CI)\\ 
 \hline
-0.0 to 1.0 & 0.667 [0.616, 0.703] & 0.387 [0.369, 0.409]\\
-0.5 to 1.5 & 0.620 [0.566, 0.646] & 0.481 [0.462, 0.495]\\
-1.0 to 2.0 & 0.623 [0.569, 0.666] & 0.480 [0.459, 0.501]\\
-1.5 to 2.5 & 0.621 [0.580, 0.677] & 0.444 [0.418, 0.472]\\
-2.0 to 3.0 & 0.626 [0.464, 0.710] & 0.416 [0.376, 0.459]\\
-2.5 to 3.5 & 0.665 [0.554, 0.796] & 0.449 [0.390, 0.493]\\
-3.0 to 4.0 & 0.674 [0.540, 0.757] & 0.438 [0.374, 0.483]\\
-3.5 to 4.5 & 0.633 [0.410, 0.865] & 0.434 [0.346, 0.485]\\
-4.0 to 5.0 & 0.650 [0.248, 0.946] & --    [--   , --   ]\\
+0.0 to 1.0 & 0.639 [0.607, 0.672] & 0.461 [0.450, 0.469]\\
+0.5 to 1.5 & 0.617 [0.588, 0.652] & 0.446 [0.441, 0.453]\\
+1.0 to 2.0 & 0.599 [0.553, 0.632] & 0.331 [0.317, 0.348]\\
 \hline
 \end{tabular}	
 \end{table}
+
+
+
