auc calib results in main manuscript

--- a/report/clinical/bibliography.bib
+++ b/report/clinical/bibliography.bib
@@ -9,6 +9,17 @@
   publisher={Elsevier}
 }
 
+@article{royston2013external,
+  title={External validation of a Cox prognostic model: principles and methods},
+  author={Royston, Patrick and Altman, Douglas G},
+  journal={BMC medical research methodology},
+  volume={13},
+  number={1},
+  pages={33},
+  year={2013},
+  publisher={BioMed Central}
+}
+
 @article{steyerberg2010assessing,
   title={Assessing the performance of prediction models: a framework for some traditional and novel measures},
   author={Steyerberg, Ewout W and Vickers, Andrew J and Cook, Nancy R and Gerds, Thomas and Gonen, Mithat and Obuchowski, Nancy and Pencina, Michael J and Kattan, Michael W},
