--- a/report/clinical/main_manuscript.tex
+++ b/report/clinical/main_manuscript.tex
@@ -88,6 +88,7 @@
 %% or include affiliations in footnotes:
 
 \include{mainmatter/abstract}
+%Word count: 300 words
 
 \begin{keyword}
 Active Surveillance\sep Biopsies \sep Personalized Medicine\sep Prostate Cancer \sep Shared Decision Making
@@ -98,19 +99,23 @@ Active Surveillance\sep Biopsies \sep Personalized Medicine\sep Prostate Cancer 
 \linenumbers
 
 \include{mainmatter/introduction}
-%Intro: 496 words
-%Cumsum: 496 words
+%Intro: 492 words
+%Cumsum: 492 words
 \include{mainmatter/study_cohort}
-%Study cohort: 172 words
-%Cumsum: 668 words
+%Study cohort: 180 words
+%Cumsum: 672 words
 \include{mainmatter/stat_analysis}
-%Stat analysis: 678 words
-%Cumsum: 1346 words
+%Stat analysis: 702 words
+%Cumsum: 1374 words
 \include{mainmatter/result}
+%Stat analysis: 354 words
+%Cumsum: 1700 words
 \include{mainmatter/discussion}
+%Stat analysis: 678 words
+%Cumsum: 2378 words
 \include{mainmatter/conclusion}
-%Conclusion: 104 words
-%Cumsum: 1450 words
+%Conclusion: 127 words
+%Cumsum: 2505 words
 
 \section*{Acknowledgments}
 This work was supported by the Movember Foundation. The funder did not play any role in the study design, collection, analysis or interpretation of data, or in the drafting of this paper. The first and last Authors would like to acknowledge support by Nederlandse Organisatie voor Wetenschappelijk Onderzoek (the national research council of the Netherlands) VIDI grant nr. 016.146.301, and Erasmus University Medical Center funding.
