--- a/report/clinical/mainmatter/abstract.tex
+++ b/report/clinical/mainmatter/abstract.tex
@@ -6,11 +6,11 @@
 
 \texttt{Design, Setting, and Participants}: World's largest AS study, PRIAS; 7813 patients, 1134 experienced reclassification; prostate-specific antigen (PSA) and repeat biopsy data available.\\
 
-\texttt{Outcome Measurements, and Statistical Analysis}: Bayesian joint model based on accumulated clinical data used to predict patient-specific risk of reclassification. Predicted risks were utilized to schedule personalized biopsies. Personalized and fixed schedules were compared by number of biopsies, and model estimated expected time delay in detection of reclassification for each schedule. Model was validated externally in largest five AS cohorts from GAP3 database. Methodology implemented in a web-application.\\
+\texttt{Outcome Measurements, and Statistical Analysis}: Bayesian joint model based on accumulated clinical data used to predict patient-specific risk of reclassification. This risk was utilized to schedule personalized biopsies. Personalized and fixed schedules compared on number of biopsies and model estimated time delay in detection of reclassification for each schedule. Model validated externally in largest five AS cohorts of GAP3 database. Methodology implemented in a web-application.\\
 
-\texttt{Results and Limitations}: Rate of reclassification in PRIAS was 50\% in 10 years of follow-up. PSA velocity was a stronger predictor of reclassification (Hazard~Ratio:~2.47, 95\%CI:~1.93--2.99), than PSA value (Hazard~Ratio:~0.99, 95\%CI:~0.89--1.11). Internal validation: Time varying area under ROC curve for reclassification prediction between 0.62 and 0.69, and prediction error between 0.23 and 0.37. External validation: Results similar to internal validation only for Toronto, Memorial Sloan Kettering, and Johns Hopkins AS cohorts.\\
+\texttt{Results and Limitations}: Rate of reclassification in PRIAS was 35\% at year 5 of follow-up. PSA velocity stronger predictor of reclassification (Hazard~Ratio:~2.47, 95\%CI:~1.93--2.99), than PSA value (Hazard~Ratio:~0.99, 95\%CI:~0.89--1.11). Validation: Area under ROC curve for risk predictions between 0.55 and 0.75 for PRIAS, Johns Hopkins, Toronto, and Memorial Sloan Kettering AS cohorts. Model required recalibration for all external cohorts except Johns Hopkins cohort.\\
 
-\texttt{Conclusions}: We developed personalized biopsy schedules as alternative to fixed schedules for AS patients. To assist patients/doctors in biopsy decisions, we provided them expected time delay in detection of reclassification, for both personalized and fixed schedules. We implemented our methodology in a web-application.\\
+\texttt{Conclusions}: We used risk predictions of reclassification to schedule personalized biopsies for AS patients. To assist patients/doctors in shared decision making of appropriate biopsy schedule, we provided them expected time delay in detection of reclassification, for personalized/fixed schedules. Our model is externally validated, and our methodology is available for multiple AS cohorts as a web-application.\\
 
-\texttt{Patient Summary}: Personalized biopsy schedules are a novel alternative to fixed biopsy schedules (e.g., yearly biopsies). They rely on patient-specific risk of reclassification.  Personalized schedules can offer a better balance between number of biopsies and delay in detection of Gleason upgrade than yearly biopsies.
+\texttt{Patient Summary}: Personalized biopsy schedules are a novel alternative to fixed biopsy schedules. They rely on patient-specific risk of reclassification and can offer better balance between number of biopsies and time delay in detection of reclassification than current schedules.
 \end{abstract}
