--- a/report/clinical/supplementary.tex
+++ b/report/clinical/supplementary.tex
@@ -100,9 +100,9 @@
 \clearpage
 \input{supplementary/B_risk_prediction_validation}
 \clearpage
-\input{supplementary/biopsy_scheduling}
+\input{supplementary/C_biopsy_scheduling}
 \clearpage
-\input{supplementary/webapp}
+\input{supplementary/D_webapp}
 \clearpage
 \input{supplementary/E_source_code}
 \clearpage
