--- a/report/clinical/mainmatter/result.tex
+++ b/report/clinical/mainmatter/result.tex
@@ -1,24 +1,17 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Results}
-\subsection{Joint Model Results}
-\textbf{Overall cumulative-risk:} In PRIAS, the probability of experiencing reclassification within the first five and ten years was 33\% and 42\%, respectively (cumulative-risk plot in Appendix A). That is, many patients do not require any biopsy in the first ten years.
+\subsection{Model Results}
+In PRIAS, the rate of reclassification within the first five years was 35\%. This rate was capped at a maximum of 50\% in external GAP3 cohorts (Panel~B, Figure~\ref{fig:auc_beforecalib}). That is, many patients do not require any biopsy in the first five years. 
 
-\textbf{Effect of age at inclusion in AS:} For every ten year increase in patient age, the adjusted hazard ratio of reclassification is 1.45~(95\%CI:~1.30--1.63). 
-
-\textbf{Effect of PSA:} When PSA value (log scale) increases from 2.36 to 3.07 (25-th and 75-th percentile of fitted PSA), the adjusted hazard ratio of reclassification is 0.99~(95\%CI:~0.89--1.11). When estimated instantaneous PSA (log scale) velocity increases from -0.09 to 0.31 (25-th and 75-th percentile of estimated velocity), the adjusted hazard ratio of reclassification is 2.47~(95\%CI:~1.93--2.99). Hence, instantaneous PSA (log scale) velocity is a stronger predictor for reclassification than PSA value (log scale). Detailed parameter estimates are in Appendix~A.4.
+In the fitted joint model, for every ten year increase in patient age (difference between 75-th and 25-th percentile of patient age) the adjusted hazard ratio of reclassification is 1.45~(95\%CI:~1.30--1.63). When fitted PSA value (log scale) increases from 2.36 to 3.07 (25-th to 75-th percentile), the adjusted hazard ratio of reclassification is 0.99~(95\%CI:~0.89--1.11). When estimated instantaneous PSA (log scale) velocity increases from -0.09 to 0.31 (25-th to 75-th percentile), the adjusted hazard ratio is 2.47~(95\%CI:~1.93--2.99). Hence, instantaneous velocity of PSA (log scale) is a stronger predictor for reclassification than its value. Detailed parameter estimates are in Supplementary~A.2.
 
 \subsection{Validation Results}
-\textbf{Discrimination (AUC):} Since AS studies are longitudinal in nature, the area under the receiver operating characteristic curve (AUC) changes over time. This time-varying AUC is shown in Panel~A, Figure~\ref{fig:auc_calib}. The AUC is only calculated until year five (95-percentile of observed reclassification times in PRIAS) of follow-up. 
-
-\textbf{Calibration:} The calibration plots in Panel~B, Figure~\ref{fig:auc_calib} indicate that the model predictions are well calibrated for all five external cohorts. 
-
-Detailed results for model validation are available in Appendix B.
-%For predictions within PRIAS (internal validation), the time-dependent AUC was between 0.62 and 0.69, and RMSPE between 0.23 and 0.37 over the whole follow-up period. For validation in external cohorts, the AUC was similar to the AUC of PRIAS for all cohorts during the first three years of follow-up. 
+The time-varying AUC and calibration of our model in different cohorts is shown in Panel~A and Panel~B of Figure~\ref{fig:auc_beforecalib}, respectively. The AUC achieves a moderate level in all cohorts. It fluctuates roughly around 0.63 over time. In terms of calibration, our model seems well calibrated only for the Johns Hopkins AS cohort. However, this issue was resolved (Figure~6, Supplementary~B) upon recalibration of our model's baseline hazard of reclassification separately for each cohort. We found trivial differences in risk predictions for individual patients from our recalibrated joint model, and from separately fitted new joint models for each cohort (Figure~7, Supplementary~B). Comprehensive discussion of validation results is in Supplementary~B.
 
 \begin{figure}
-\centerline{\includegraphics[width=\columnwidth]{images/auc_calib.eps}}
-\caption{\textbf{Validation of predictions of Gleason $\geq$ 7 (GS7)}. In \textbf{Panel~A} we can see that the time dependent area under the receiver operating characteristic curve or AUC (measure of discrimination) is above 0.5 in PRIAS (internal validation), and in Toronto, JHAS, MSKCC, KCL, and MUSIC AS cohorts (external validation). In \textbf{Panel~B} we can see that the time dependent root mean squared prediction error or RMSPE (measure of calibration) is similar for PRIAS, and JHAS and Toronto cohorts. The bootstrapped 95\% confidence interval for these estimates are presented in Table 6 to Table 11 of Appendix B. Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{JHAS}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
-\label{fig:auc_calib}
+\centerline{\includegraphics[width=\columnwidth]{images/auc_beforecalib.eps}}
+\caption{\textbf{Model Validation Results}. \textbf{Panel~A}: time dependent area under the receiver operating characteristic curve or AUC (measure of discrimination). \textbf{Panel~B}: calibration-at-large~\citep{royston2013external,steyerberg2010assessing}, with solid lines depicting the non-parameteric estimate of the cumulative-risk of reclassification~\citep{turnbull1976empirical}, and dashed lines showing the average cumulative-risk of reclassification obtained using the joint model fitted to the PRIAS dataset. Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
+\label{fig:auc_beforecalib}
 \end{figure}
 
 \subsection{Personalized Schedule Results}
